--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/shixun?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
+
+bitcoin.jsonrpc.username=sq
+bitcoin.jsonrpc.password=123456
+bitcoin.jsonrpc.url=http://localhost:18332/
